--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,15 +3,15 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: tbaghdas <tbaghdas@student.42.fr>          +#+  +:+       +#+         #
+#    By: btigran <btigran@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/04 21:03:17 by tbaghdas          #+#    #+#              #
-#    Updated: 2025/02/13 22:17:00 by tbaghdas         ###   ########.fr        #
+#    Updated: 2025/07/03 14:53:41 by btigran          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CFILES	= ft_isalnum.c ft_isprint.c ft_memcmp.c  ft_putchar_fd.c ft_split.c \
-		ft_strlcat.c ft_strncmp.c ft_substr.c ft_atoi.c ft_isalpha.c \
+		ft_strlcat.c ft_strcmp.c ft_strncmp.c ft_substr.c ft_atoi.c ft_isalpha.c \
 		ft_itoa.c ft_memcpy.c ft_putendl_fd.c ft_strchr.c  ft_strlcpy.c \
 		ft_strnstr.c ft_tolower.c ft_bzero.c ft_isascii.c  ft_striteri.c\
 		ft_memmove.c ft_putnbr_fd.c  ft_strdup.c  ft_strlen.c  ft_strrchr.c \
