--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: btigran <btigran@student.42.fr>            +#+  +:+       +#+         #
+#    By: tbaghdas <tbaghdas@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/04 21:03:17 by tbaghdas          #+#    #+#              #
-#    Updated: 2025/07/03 14:53:41 by btigran          ###   ########.fr        #
+#    Updated: 2025/07/12 14:42:15 by tbaghdas         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
